--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,14 @@
   color: black;
 }
 
+.mail {
+  color: rgb(184, 27, 27);
+}
+
+.resume {
+  color: rgb(13, 104, 35);
+}
+
 .linkedin {
   color: #0077b5;
 }
@@ -71,12 +79,20 @@
   background-color: #0077b5;
 }
 
+.resume:hover {
+  background-color: rgb(13, 104, 35);
+}
+
 .angellist:hover {
   background-color: grey;
 }
 
 .github:hover {
   background-color: black;
+}
+
+.mail:hover {
+  background-color: rgb(184, 27, 27);
 }
 
 /* Buttons - Read Me, Contact Us */
@@ -198,6 +214,18 @@ nav i {
   background: url(../../assets/img/bg.png) repeat;
   padding-left: 190px;
 } */
+
+body {
+  margin: 0;
+  padding: 0;
+  
+  width: 100%;
+  height: 100vh;
+ 
+  background: #FFFFFF;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.7) .1em, transparent .1em), linear-gradient(90deg, rgba(246, 250, 246, 0.7) .1em, transparent .1em);
+  background-size: 3em 3em;
+}
 
 main {
   /* background: url(../../assets/img/white-ai-wallpaper.jpg) repeat; */
